--- a/action.yml
+++ b/action.yml
@@ -1,13 +1,14 @@
 name: 'Hugo in Action'
 description: 'Build Hugo extended site, Deploy to GitHub Page'
+branding:
+  icon: 'aperture'  
+  color: 'red'
+
+
 inputs:
   access_token:
     description: 'Github access token,'
     required: true
-  folder:
-    description: 'Which folder will push'
-    required: false
-    default: 'public'
   branch: # id of input
     description: 'Which branch will publish. Default value is gh-pages for unit|organization, If for personal set value to master'
     required: false
@@ -22,6 +23,5 @@ runs:
   image: 'Dockerfile'
   args:
     - ${{ inputs.access_token }}
-    - ${{ inputs.folder }}
     - ${{ inputs.branch }}
     - ${{ inputs.cname }}
